<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.1.0</version>
    </parent>
    <groupId>net.binis.example.service</groupId>
    <artifactId>annotation.service</artifactId>
    <version>1.0-SNAPSHOT</version>
    <name>Binis CodeGen example service (annotation)</name>
    <description>Example service for Binis CodeGen library</description>

    <properties>
        <java.version>21</java.version>
        <binis.version>1.1.8</binis.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <postgresql.version>42.5.4</postgresql.version>
        <spring.version>3.1.4</spring.version>
        <spring-security.version>6.1.0</spring-security.version>

        <main-class>net.binis.example.service.AnnotationExampleApplication</main-class>
    </properties>
    <dependencies>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>2.0.9</version>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.30</version>
        </dependency>

        <dependency>
            <groupId>dev.binis</groupId>
            <artifactId>code-generator-annotation</artifactId>
            <version>${binis.version}</version>
            <scope>compile</scope>
            <exclusions>
                <exclusion>
                    <groupId>org.slf4j</groupId>
                    <artifactId>slf4j-simple</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>dev.binis</groupId>
            <artifactId>code-generator</artifactId>
            <version>${binis.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.slf4j</groupId>
                    <artifactId>slf4j-simple</artifactId>
                </exclusion>
            </exclusions>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>dev.binis</groupId>
            <artifactId>code-generator-spring</artifactId>
            <version>${binis.version}</version>
        </dependency>
        <dependency>
            <groupId>dev.binis</groupId>
            <artifactId>code-generator-plugin</artifactId>
            <version>${binis.version}</version>
        </dependency>
        <dependency>
            <groupId>dev.binis</groupId>
            <artifactId>code-generator-validation</artifactId>
            <version>${binis.version}</version>
        </dependency>
        <dependency>
            <groupId>dev.binis</groupId>
            <artifactId>code-generator-spring-configuration</artifactId>
            <version>${binis.version}</version>
        </dependency>
        <dependency>
            <groupId>dev.binis</groupId>
            <artifactId>code-generator-jackson</artifactId>
            <version>${binis.version}</version>
        </dependency>
        <dependency>
            <groupId>dev.binis</groupId>
            <artifactId>code-generator-hibernate</artifactId>
            <version>${binis.version}</version>
        </dependency>
        <dependency>
            <groupId>dev.binis</groupId>
            <artifactId>code-generator-redis</artifactId>
            <version>${binis.version}</version>
        </dependency>
        <dependency>
            <groupId>jakarta.persistence</groupId>
            <artifactId>jakarta.persistence-api</artifactId>
            <version>3.1.0</version>
        </dependency>
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <version>${postgresql.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-core</artifactId>
            <version>2.15.0</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.15.2</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.dataformat</groupId>
            <artifactId>jackson-dataformat-xml</artifactId>
            <version>2.15.2</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.datatype</groupId>
            <artifactId>jackson-datatype-jsr310</artifactId>
            <version>2.15.2</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-web</artifactId>
            <version>${spring-security.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
            <version>${spring.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>ch.qos.logback</groupId>
                    <artifactId>logback-classic</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>dev.binis</groupId>
            <artifactId>code-generation-test</artifactId>
            <version>${binis.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.slf4j</groupId>
                    <artifactId>slf4j-simple</artifactId>
                </exclusion>
            </exclusions>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <compilerArgs>
                        <arg>--enable-preview</arg>
<!--                        <arg>-Xplugin:BinisCodeGen</arg>-->
                    </compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
